<resources>
    <string name="app_name">DrawerNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_service">Service</string>
    <string name="menu_web">Web</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_services">ServicesActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
