<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.java.drawernav.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.java.drawernav.ui.home.HomeFragment"
        android:label="@string/home_second"
        tools:layout="@layout/activity_web">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.java.drawernav.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.java.drawernav.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_service"
        tools:layout="@layout/fragment_services" />
    <fragment
        android:id="@+id/nav_send"
        android:name="com.java.drawernav.ui.SendFragment"
        android:label="@string/menu_send" />
    <fragment
        android:id="@+id/nav_share"
        android:name="com.java.drawernav.ui.ShareFragment"
        android:label="@string/menu_share" />
    <fragment
        android:id="@+id/nav_web"
        android:name="com.java.drawernav.WebActivity"
        android:label="@string/menu_web"
        tools:layout="@layout/activity_web" />

</navigation>